--- a/todo-list-proj/src/styles/header.css
+++ b/todo-list-proj/src/styles/header.css
@@ -15,3 +15,33 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.form-title{
+  height: 5vh;
+  border-radius: 10px;
+  width: 35vh;
+  border: 1px solid #EEEEEE;
+  padding-left: 10px;
+      font-size: 2em;
+font-weight: bold;
+padding-right: 10px;
+gap: 10px 15%;
+}
+
+.form__button-submit{
+  width: 15vh;
+  height: 5vh;
+  border-radius: 10px;
+  background-color: #9CC0E7;
+  outline: none;
+  border-color: transparent;
+}
+
+#form{
+display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+gap: 8px 10%;
+
+}
